Reference cycle figure.

--- a/main.tex
+++ b/main.tex
@@ -209,7 +209,15 @@ interface with C++.
 
 \vspace{-0.15 cm}
 \hfill \uncover<4->{{\small See Aryan Roy's poster!} \hspace{0.2 cm}}
+\end{frame}
 
+\begin{frame}{Issue \#2: Reference cycles through C++}
+\vspace{0.15 cm}
+
+\begin{columns}
+\column{1.15\linewidth}
+\includegraphics[width=\linewidth]{python-cpp-reference-cycles.pdf}
+\end{columns}
 \end{frame}
 
 
